* Fix: FloatingArmorColours no longer applies to target panel.
* Fix: Geothermal and Radiation Field are now factored in heat preview fix.
* Fix: Range meters in hit modifier list no longer show decimal.
* Fix: Distance info is now displayed for non-mech units.
* Fix: FixPaperDollRearStructure now works in campaign, without going through combat first.
* Fix: DFA self-damage log location misalignment.

2018-09-15 AIM Version 2.5 for BATTLETECH 1.2.0

* New: Fix heat prediction on move/jump/sprint preview.
* New: Show distance number in target panel, and movement point in selection panel.
* New: Show mechwarrior stats in one-line mouseover hint, instead of only HP.
* New: Variable melee height difference limit by mech class.
* New: Configure friends' and foes' crit multiplier.
* New: Vehicles and Turrets may now be crit'ed and killed by ammo explosions.
* New: Critical hits now follows damage transfer.
* New: Critical hits rates and cap may be set.
* New: Critical hits may optionally happens through armour.
* New: Critical hits may optionally ignore destroyed component and space.
* New: Critical hits may optionally be transferred inward when there is nothing to crit.
* New: Critical hits may optionally be rolled until there is no more crit chance.
* New: Prevent critical hit on locations with intact structure.
* New: Attack Log now logs DFA self-damage and overheat self-damage.
* Mod: ShowUnderArmourDamage now compatible with Mech Engineer's composite structure.
* Mod: Assume mod not found when mod compatibility check is executed at the wrong time.
* Mod: UnlockMeleePositioning and FixPaperDollRearStructure switched to IL code patch.
* Fix: Turret and Building LOS are now always coloured as front attack, instead of side or rear.
* Fix: Fix FixBossHeadCalledShotDisplay regression.
* Fix: Jumped modifier should no longer persist into next turn.
* Fix: ShowUnderArmourDamage now works in campaign, without going through combat first.