@@ -35,6 +35,8 @@ CHANGE LOG
 * Fix: Range meters in hit modifier list no longer show decimal.
 * Fix: Distance info is now displayed for non-mech units.
 * Fix: FixPaperDollRearStructure now works in campaign, without going through combat first.
+* Fix: Melee height modifier now compatible with MaxMeleeVerticalOffsetByClass.
+* Fix: Only first crit roll and first crit component is now logged when MultupleCrits is true.
 * Fix: DFA self-damage log location misalignment.
 
 2018-09-15 AIM Version 2.5 for BATTLETECH 1.2.0
